Fix photoreel on firefox

--- a/static/style.css
+++ b/static/style.css
@@ -121,4 +121,5 @@ li.horizontal-list:last-child {
 .photo {
     margin: 0;
     padding: 0;
+    flex: 0 0 auto;
 }
